--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,24 @@
-<%= @foo.to_json %>
+<script type="text/javascript">
+window.data = <%= @data.to_json.html_safe %>
+</script>
 
+<% @data.each do |month| %>
+<div class="row-fluid">
+	<div class="span4 offset4 text-center"><h2><%= month[:month] %></h2></div>
+</div>
+<div class="row-fluid">
+  <div class="span4 text-center well">
+  	<p class="lead">Abbot</p>
+  	<% month[:abbot].each do |word| %>
+  		<p><%= word[:word] %> - <%= word[:count] %></p>
+  	<% end %>
+  </div>
+  <div class="span4 offset4 text-center well">
+  	<p class="lead">Gillard</p>
+  	<% month[:gillard].each do |word| %>
+  		<p><%= word[:word] %> - <%= word[:count] %></p>
+  	<% end %>
+  </div>
+</div>
+
+<% end %>
